--- a/po/fcitx-keytheme.pot
+++ b/po/fcitx-keytheme.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-06-20 20:16+0800\n"
+"POT-Creation-Date: 2012-06-20 20:33+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -98,7 +98,7 @@ msgid "Shortcut"
 msgstr ""
 
 #: /home/yuyichao/programming/fcitx-keytheme/build/po/tmp/fcitx-keytheme.conf.in.h:1
-msgid "Keytheme"
+msgid "Key Theme"
 msgstr ""
 
 #: /home/yuyichao/programming/fcitx-keytheme/build/po/tmp/fcitx-keytheme.conf.in.h:2
